fix: 完了レポートのディレクトリ構造を変更し、関連するドキュメントを更新

--- a/config/agents.yaml
+++ b/config/agents.yaml
@@ -71,5 +71,5 @@ agents:
     base_pane: 6
     instruction_file: "ignitian.md"
     queue_dir: "workspace/queue/ignitians"
-    report_dir: "workspace/reports"
+    report_queue: "workspace/queue/coordinator"
     default_count: 8
